room close visible only on hover + fixes

--- a/styleCoj.css
+++ b/styleCoj.css
@@ -60,16 +60,24 @@ button {
     }
 }
 .time {
-    color: var(--back-color);
+    color: var(--input-background-color);
+    visibility: hidden;
     float: right;
     padding-left: 5px;
     font-size: 12px;
 }
   
-.room_list {
-    text-align: center;
+
+.close {
+    visibility: hidden;
 }
-  
+
+.room_item:hover {
+    .close {
+        visibility: visible;
+    }
+}
+
 .default_msg {
     color: var(--input-background-color);
     text-align: center;
@@ -106,7 +114,7 @@ button {
     &:hover {
         opacity: 0.7;
         .time {
-            color: var(--input-background-color);
+            visibility: visible;
         }
     }
 }
